# cookiecutter-pypackage

./: .gitignore  README.rst  cookiecutter.json  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docs/: index.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
